[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = { version = "0.4.23", features = ["serde"] }
ethereum-types = "0.14.1"
ethers = { version = "2.0.7", features = ["legacy-ws", "ws", "rustls", "openssl", "abigen", "eip712"] }
fraction = { path = "../fraction" }
engine = { path = "../engine" }
futures = "0.3.28"
prefix-hex = "0.7.0"
prost = "0.11.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "offline",
    "uuid",
    "bigdecimal",
    "chrono"
] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[build-dependencies]
ethers = "2.0.7"
tonic-build = "0.9.2"
