[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = { version = "0.4.26", features = ["serde"] }
engine = { path = "../engine" }
ethereum-types = "0.14.1"
ethers = { version = "2.0.8", features = ["legacy-ws", "ws", "rustls", "openssl", "abigen", "eip712"] }
evm = { path = "../types/evm" }
fraction = { path = "../types/fraction" }
futures = "0.3.28"
linked-hash-map = "0.5.6"
macros = { path = "../types/macros" }
num-bigint = { version = "0.4.3", features = ["serde", "arbitrary", "quickcheck"] }
num-derive = "0.4.0"
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.16"
prefix-hex = "0.7.1"
prost = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "bigdecimal",
    "chrono"
] }
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
value = { path = "../types/value" }

[build-dependencies]
ethers = "2.0.8"
tonic-build = "0.9.2"
