[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
ethereum-types = "0.14.1"
futures = "0.3.25"
num-bigint = { version = "0.4.3", features = ["serde"] }
prefix-hex = "0.5.0"
serde = "1.0.152"
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [
    "all",
    "runtime-tokio-rustls",
    "offline",
] }
thiserror = "1.0.24"
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
