[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.5"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
ethereum-types = "0.14.1"
futures = "0.3.25"
num-bigint = { version = "0.4.3", features = ["serde"] }
predicates = "3.0.2"
prefix-hex = "0.7.0"
serde = "1.0.155"
serde_json = "1.0.91"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = [
    "all",
    "runtime-tokio-rustls",
    "offline",
] }
thiserror = "1.0.24"
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
