[package]
name = "engagement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.2", features = ["http2", "headers"] }
bytes = "1.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
ethereum-types = "0.14.1"
fraction = { path = "../fraction" }
futures = "0.3.28"
headers = "0.3.8"
hyper = { version = "0.14.26", features = ["full"] }
prefix-hex = "0.7.0"
prost = "0.11.6"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "offline",
    "uuid",
    "bigdecimal",
    "chrono"
] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tonic = "0.9.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.9.2"

