[package]
name = "engagement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.18", features = ["http2", "headers"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
ethereum-types = "0.14.1"
fraction = { path = "../types/fraction" }
futures = "0.3.28"
headers = "0.3.8"
hyper = { version = "0.14.27", features = ["full"] }
num-bigint = { version = "0.4.3" }
prefix-hex = "0.7.0"
prost = "0.11.9"
rand = "0.8.5"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "offline",
    "uuid",
    "bigdecimal",
    "chrono"
] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
value = { path = "../types/value" }

[build-dependencies]
tonic-build = "0.9.2"

