[package]
name = "repository"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
database = { path = "../database" }
linked-hash-map = "0.5.6"
sqlx = { version = "0.6.2", features = [
    "all",
    "runtime-tokio-rustls",
    "offline",
] }
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
