[package]
name = "worker"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["http2", "headers"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
engagement = { path = "../engagement" }
ethereum-types = "0.14.1"
ethers-core = "2.0.8"
evm = { path = "../types/evm" }
fraction = { path = "../types/fraction" }
futures = "0.3.28"
headers = "0.3.8"
hyper = { version = "0.14.27", features = ["full"] }
macros = { path = "../types/macros" }
nalgebra = "0.32.3"
num-bigint = { version = "0.4.3" }
ordered-float = { version = "3.8.0", features = ["serde"] }
predicates = "3.0.3"
prefix-hex = "0.7.1"
pricelevel = { path = "../types/pricelevel" }
prost = "0.11.9"
rand = "0.8.5"
redis = { version = "0.23.2", features = ["tokio-comp"] }
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.2.0"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "bigdecimal",
    "chrono"
] }
strsim = "0.10.0"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
value = { path = "../types/value" }

[build-dependencies]
tonic-build = "0.9.2"
