[package]
name = "evm"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
prefix-hex = "0.7.1"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "bigdecimal",
    "chrono"
] }
