[package]
name = "fraction"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
num-bigint = { version = "0.4.3", features = ["serde", "arbitrary", "quickcheck"] }
num-derive = "0.4.0"
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.16"
proptest = "1.2.0"
seq-macro = "0.3.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = [ "postgres", "bigdecimal" ] }

[package.metadata.cargo-udeps.ignore]
normal = ["proptest", "seq-macro"]
