[package]
name = "infinity"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = { path = "../fraction" }
num-bigint = { version = "0.4.4", features = ["serde", "arbitrary", "quickcheck"] }
num-derive = "0.4.0"
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.16"
proptest = "1.2.0"
seq-macro = "0.3.5"
serde = { version = "1.0.186", features = ["derive"] }
