[package]
name = "pricelevel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
fraction = { path = "../fraction" }
num-bigint = { version = "0.4.3", features = ["serde", "arbitrary", "quickcheck"] }
num-derive = "0.3.3"
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.15"
proptest = "1.1.0"
seq-macro = "0.3.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"

[package.metadata.cargo-udeps.ignore]
normal = ["proptest", "seq-macro"]
