[package]
name = "value"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = { path = "../fraction" }
infinity = { path = "../infinity" }
num-bigint = { version = "0.4.3", features = ["serde", "arbitrary", "quickcheck"] }
num-derive = "0.4.0"
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.15"
proptest = "1.2.0"
seq-macro = "0.3.3"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"